--- a/scripts/data_preprocessing/download_park_thymic_atlas.Rmd
+++ b/scripts/data_preprocessing/download_park_thymic_atlas.Rmd
@@ -191,29 +191,43 @@ saveRDS(seur_mouse, "./data_github/park_dataset/park_seurat_mouse.rds")
 # HUMAN THYMUS ATLAS (THYMOCYTES ONLY)
 
 ## Import data
-The Human Thymus Atlas with only thymocytes (corresponding to Figure 2C in [Park et al.](https://www.science.org/doi/10.1126/science.aay3224) paper) was downloaded from two sources as a `h5ad` file:
+The Human Thymus Atlas with only thymocytes (corresponding to Figure 2C in [Park et al.](https://www.science.org/doi/10.1126/science.aay3224) paper) was downloaded from two sources as a `h5ad` file, and also one as `.rds` file:
 
-- [cellxgene](https://cellxgene.cziscience.com/collections/de13e3e2-23b6-40ed-a413-e9e12d7d3910), the one containing 76,994 cells;
+- [cellxgene](https://cellxgene.cziscience.com/collections/de13e3e2-23b6-40ed-a413-e9e12d7d3910), the one containing 76,994 cells: downloaded from the `.h5ad` and `.rds` file (because the `.h5ad` file contains the table with appropriate gene symbols, while the `.rds` file contains raw counts which we'll need for MetaNeighbor);
 - [cellatlas.io](https://app.cellatlas.io/thymus-development/dataset/10/scatterplot).
 
 Once again, we will compare them and see which is more useful for our purposes. First, `cellxgene`:
 ```{r import-data-human-thymocytes-cellgene, fig.height=10, fig.width=15}
-# import h5ad object downloaded
+# import h5ad and rds objects downloaded
 sce_human_thymocytes_cellgene <- zellkonverter::readH5AD("~/Projects/HumanThymusProject/data_github/park_dataset/de8665a2-0476-4865-b4af-c7b8d3b1b87f.h5ad")
+seur_human_thymocytes_cellgene <- readRDS("~/Projects/HumanThymusProject/data_github/park_dataset/de8665a2-0476-4865-b4af-c7b8d3b1b87f.rds")
 print(sce_human_thymocytes_cellgene)
+print(seur_human_thymocytes_cellgene)
 
 # check out metadata
 colData(sce_human_thymocytes_cellgene)
+seur_human_thymocytes_cellgene@meta.data
 
 # check umap and cell type annotation
 plotReducedDim(sce_human_thymocytes_cellgene, dimred="X_umap", colour_by="cell_type")
+DimPlot(seur_human_thymocytes_cellgene, reduction = "umap", group.by="cell_type")
 
 # check out gene names
 rowData(sce_human_thymocytes_cellgene)
 table(duplicated(rowData(sce_human_thymocytes_cellgene)$feature_name), useNA="ifany") # none of the gene symbols are duplicated (ideal :)
-```
+rownames(seur_human_thymocytes_cellgene)[1:10]
+table(rownames(seur_human_thymocytes_cellgene)==rownames(sce_human_thymocytes_cellgene), useNA="ifany")
 
-The cell annotation is not ideal, however the gene symbols are not duplicated, which is better. Second, data from `cellatlas.io`:
+# check out where are the counts
+assay(sce_human_thymocytes_cellgene)[1:5,1:5] # these are logcounts, not counts!!
+seur_human_thymocytes_cellgene[["RNA"]]@counts[1:5,1:5] # these are counts (what we need)
+seur_human_thymocytes_cellgene[["RNA"]]@data[1:5,1:5] # these are the logcounts found in the h5ad file
+```
+The cell annotation is not ideal, and the `SingleCellExperiment` object (from `.h5ad` file) doesn't contain raw counts. However, the `Seurat` object (from `.rds` file) contains raw counts (which we need), and the `SingleCellExperiment` object (from `.h5ad` file) contains unique gene symbols we can use.
+
+<br/>
+
+Second, data from `cellatlas.io`:
 ```{r import-data-human-thymocytes-cellatlasio, fig.height=10, fig.width=15}
 # import h5ad object downloaded
 sce_human_thymocytes_cellatlas <- zellkonverter::readH5AD("~/Projects/HumanThymusProject/data_github/park_dataset/HTA08_v01_A06_Science_human_tcells.h5ad")
@@ -229,12 +243,16 @@ plotReducedDim(sce_human_thymocytes_cellatlas, dimred="X_umap", colour_by="cell.
 rowData(sce_human_thymocytes_cellatlas)
 rownames(sce_human_thymocytes_cellatlas)[1:5]
 table(duplicated(rownames(sce_human_thymocytes_cellatlas)), useNA="ifany") # some of the gene symbols are duplicated (not great)
+
+# check out where are the counts
+assay(sce_human_thymocytes_cellatlas)[1:5,1:5] # these are logcounts, not counts!!
 ```
 
-In summary, similarly to the entire Human Thymus Atlas (which we previously processed in this notebook):
+In summary:
 
-- `h5ad` file from [cellxgene](https://cellxgene.cziscience.com/collections/de13e3e2-23b6-40ed-a413-e9e12d7d3910) contains more information on feature names (with unique gene symbols);
-- `h5ad` file from [cellatlas.io](https://app.cellatlas.io/thymus-development/dataset/10/scatterplot) contains more/better cell metadata information (with correct clustering annotation).
+- `.h5ad` file from [cellxgene](https://cellxgene.cziscience.com/collections/de13e3e2-23b6-40ed-a413-e9e12d7d3910) contains more information on feature names (with unique gene symbols);
+- `.rds` file from [cellxgene](https://cellxgene.cziscience.com/collections/de13e3e2-23b6-40ed-a413-e9e12d7d3910) contains raw counts;
+- `.h5ad` file from [cellatlas.io](https://app.cellatlas.io/thymus-development/dataset/10/scatterplot) contains more/better cell metadata information (with correct clustering annotation).
 
 We will combine all we need into a new `SingleCellExperiment` object, and then convert it into a `Seurat` object.
 
@@ -242,16 +260,20 @@ We will combine all we need into a new `SingleCellExperiment` object, and then c
 ## Create Seurat object
 First, let's create a new `SingleCellExperiment` object.
 ```{r create-human-thymocytes-sce-object-clean}
-# check that the cell IDs are the same from both sources
+# check that the cell IDs are the same from all sources
 table(colnames(sce_human_thymocytes_cellgene) == colnames(sce_human_thymocytes_cellatlas), useNA="ifany")
-# table(rownames(colData(sce_human_thymocytes_cellgene)) == rownames(colData(sce_human_thymocytes_cellatlas)), useNA="ifany")
+table(colnames(sce_human_thymocytes_cellgene) == colnames(seur_human_thymocytes_cellgene), useNA="ifany")
+
+# check that the gene IDs are the same between the SCE and Seurat objects from cellxgene
+table(rownames(seur_human_thymocytes_cellgene)==rownames(sce_human_thymocytes_cellgene), useNA="ifany")
+table(rownames(seur_human_thymocytes_cellgene)==rownames(rowData(sce_human_thymocytes_cellgene)), useNA="ifany")
 
 # check that umap coordinates are the same from both sources
 table(reducedDim(sce_human_thymocytes_cellgene, "X_umap") == reducedDim(sce_human_thymocytes_cellatlas, "X_umap"), useNA="ifany")
 
 # create new SCE object
 sce_human_thymocytes_clean <- SingleCellExperiment(
-  list(counts=assay(sce_human_thymocytes_cellgene)),
+  list(counts=seur_human_thymocytes_cellgene[["RNA"]]@counts),
   colData=colData(sce_human_thymocytes_cellatlas),
   rowData=rowData(sce_human_thymocytes_cellgene),
   reducedDims=list(umap=reducedDim(sce_human_thymocytes_cellgene, "X_umap"))
